--- a/other_gens.ipynb
+++ b/other_gens.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Date: 12 December 2023\n",
     "\n",
-    "In our paper <a href=\"https://arxiv.org/abs/2304.14646\">The maximal subgroups of the Monster</a>, we note that we have constructed (generators) for certain maximal subgroups of the Monster $\\mathbf{M}$ that were not needed for our proofs, but that might be of independent interest. \n",
+    "In our paper <a href=\"https://arxiv.org/abs/2304.14646\">The maximal subgroups of the Monster</a>, we note that we have constructed (generators for) certain maximal subgroups of the Monster $\\mathbf{M}$ that were not needed for our proofs, but that might be of independent interest. \n",
     "\n",
     "Here we provide those generators (in <a href=\"https://github.com/Martin-Seysen/mmgroup\">mmgroup</a> format), with proofs that they generate the claimed maximal subgroups of $\\mathbf{M}$.\n",
     "\n",
