--- a/other_gens.ipynb
+++ b/other_gens.ipynb
@@ -456,7 +456,7 @@
    "id": "83aed09c",
    "metadata": {},
    "source": [
-    "To check condition 2, note that every element of order $39$ in $\\text{Th}$ powers to $\\text{Th}$-class $3\\text{A}$. The following element centralises $\\langle c_2,c_3 \\rangle$, has order $39$, and powers to $b$. Therefore, conditions 2 holds."
+    "To check condition 2, note that every element of order $39$ in $\\text{Th}$ powers to $\\text{Th}$-class $3\\text{A}$. The following element centralises $\\langle c_2,c_3 \\rangle$, has order $39$, and powers to $b$. Therefore, condition 2 holds."
    ]
   },
   {
