--- a/other_gens.ipynb
+++ b/other_gens.ipynb
@@ -720,7 +720,7 @@
     "\n",
     "<a href=\"https://doi.org/10.1006/jabr.2001.9037\">Holmes and Wilson</a> proved that $\\mathbf{M}$ has a unique conjugacy class of subgroups isomorphic to $\\text{PSL}_2(29)$, and that every such subgroup extends to a maximal subgroup of the form $\\text{PSL}_2(29){:}2 = \\text{Aut}(\\text{PSL}_2(29))$. It therefore suffices to construct any $\\text{PSL}_2(29){:}2 < \\mathbf{M}$. \n",
     "\n",
-    "Consider the following elements, noting that $a$ is the standard $2\\text{B}$-involution in mmgroup, i.e. the center of the distinghuised $2\\text{B}$-centraliser $\\mathbf{G} \\cong 2^{1+24}.\\text{Co}_1$."
+    "Consider the following elements, noting that $a$ is the standard $2\\text{B}$-involution in mmgroup, i.e. the center of the distinguished $2\\text{B}$-centraliser $\\mathbf{G} \\cong 2^{1+24}.\\text{Co}_1$."
    ]
   },
   {
