--- a/maximals_of_M.ipynb
+++ b/maximals_of_M.ipynb
@@ -293,6 +293,7 @@
     "            os = os+1;\n",
     "             \n",
     "    j = 0\n",
+    "    end = time.time()\n",
     "    while j <= os-1:\n",
     "        for g in L:\n",
     "            el= orb[j]*g\n",
