--- a/maximals_of_M.ipynb
+++ b/maximals_of_M.ipynb
@@ -294,7 +294,7 @@
     "             \n",
     "    j = 0\n",
     "    end = time.time()\n",
-    "    while j <= os-1:\n",
+    "    while j <= os:\n",
     "        for g in L:\n",
     "            el= orb[j]*g\n",
     "            eltup = tuple(el.as_tuples())\n",
